--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,11 @@ security:
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\User:
+             algorithm: 'auto'
+             cost: 4
+             time_cost: 3
+             memory_cost: 10
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         from_database:
@@ -15,10 +19,14 @@ security:
             security: false
         main:
             lazy: true
+            logout:
+                path: /logout
+                target: /
 
 
 
-            form_login: true
+            form_login:
+                check_path: /login
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -30,5 +38,3 @@ security:
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-
-    encoders:
