feat: mailer and contact form

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ APP_SECRET=dae6b74466400a2bd6a8e3a9dca6e17e
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
+MAILER_DSN=gmail://hodicq.william@gmail.com:Mistigri93380.@default
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -32,3 +33,7 @@ DATABASE_URL="sqlite:////mnt/c/Projets/data/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
